# YOLOX-volleyball-tracking

./: pyproject.toml  run_train.sh
exps/default/: yolox_s.py
exps/example/custom/: yolox_s.py
tools/: demo.py
