[project]
name = "yolox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "ninja>=1.11.1.4",
    "numpy>=2.2.4",
    "onnx>=1.13.0",
    "onnx-simplifier==0.4.10",
    "opencv-python>=4.11.0.86",
    "psutil>=7.0.0",
    "pycocotools>=2.0.2",
    "tabulate>=0.9.0",
    "tensorboard>=2.19.0",
    "thop>=0.1.1.post2209072238",
    "torch>=1.7",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
]
